--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,68 @@
 @import "../../styles/variables.scss";
 
+.canvas-container {
+  background-color: $theme-bg-color-dark !important;
+
+  .canvas-header {
+    width: 45px;
+    height: 45px;
+    border: 1px solid rgba(255, 255, 255, 0.24);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    align-self: flex-end;
+    margin: 20px;
+
+    button {
+      background: transparent url("../../images/cross.png") center/3em auto no-repeat;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  .canvas-body {
+    .items {
+      list-style: none;
+      margin-top: 1em;
+      padding-left: 10px;
+
+      li {
+        cursor: pointer;
+        font-size: 16px;
+        margin: 20px 0;
+        font-weight: 600;
+      }
+    }
+
+    .socials {
+      display: flex;
+      justify-content: center;
+      margin-top: 40px;
+      .round-icon {
+        cursor: pointer;
+        width: 60px;
+        height: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        margin: 0 10px;
+        .icon {
+          width: 20px;
+        }
+      }
+
+      .round-icon:hover {
+        background-color: #2e303d;
+        transition: all 0.5s ease;
+      }
+    }
+  }
+}
+
 .header-container {
   width: 100%;
   padding: 20px 0;
@@ -23,6 +86,7 @@
     img {
       width: 90px;
       margin-right: 20px;
+      cursor: pointer;
     }
     p {
       margin: 0;
@@ -78,6 +142,15 @@
   }
 
   @include tablet {
+    background-color: $theme-bg-color;
+    padding: 5px 0;
+
+    .logo-container {
+      img {
+        width: 70px;
+      }
+    }
+
     .hambar-icon {
       display: flex;
       justify-content: flex-end;
@@ -92,6 +165,33 @@
     .items,
     .hire-me-btn {
       display: none;
+    }
+  }
+
+  @include mobile {
+    background-color: $theme-bg-color;
+    padding: 5px 0;
+
+    .hambar-icon {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      img {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+      }
+    }
+
+    .items,
+    .hire-me-btn {
+      display: none;
+    }
+
+    .logo-container {
+      img {
+        width: 70px;
+      }
     }
   }
 }
