--- a/src/screens/Hero/style.scss
+++ b/src/screens/Hero/style.scss
@@ -2,6 +2,7 @@
 
 .hero-section {
   padding-top: 40px;
+  scroll-margin-top: 6em;
 
   .title {
     font-size: 6em;
@@ -10,6 +11,7 @@
     line-height: 1;
     letter-spacing: 0;
   }
+
   .subtitle {
     color: $theme-text-color-fade;
     width: 70%;
@@ -59,19 +61,66 @@
       flex-direction: column-reverse;
     }
 
-    // .avatar {
-    //   width: 50%;
-    //   margin: auto;
-    // }
+    .smaller-title {
+      margin-top: 40px;
+    }
 
     .title {
       font-size: 4em;
     }
   }
 
-  // @include mobile {
-  //   .title {
-  //     font-size: 3em;
-  //   }
-  // }
+  @include mobile {
+    .custom-row {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .title {
+      font-size: 3em;
+      font-weight: 500;
+      font-family: $theme-heading-font;
+      line-height: 1;
+      letter-spacing: 0;
+    }
+
+    .smaller-title {
+      font-size: 2em;
+      margin-top: 40px;
+    }
+
+    .subtitle {
+      width: 90%;
+      font-weight: 700;
+      margin-top: 1.3em;
+      font-size: 16px;
+    }
+
+    .avatar {
+      width: 80%;
+      margin: auto;
+    }
+
+    .resume-download-btn {
+      width: 60%;
+      justify-content: center;
+      text-align: center;
+      border-radius: 50px;
+      padding: 15px 20px;
+      margin: 1.5em 0 4em;
+      cursor: pointer;
+
+      img {
+        margin-left: 20px;
+        width: 15px;
+        height: 15px;
+      }
+
+      p {
+        margin: 0;
+        font-weight: 700;
+        font-size: 15px;
+      }
+    }
+  }
 }
