build error fixed with second deploy

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,7 +33,7 @@ body {
   font-size: 15px;
   font-family: $theme-body-font;
   background-color: rgba(3, 4, 4, 0.558) !important;
-  color: white;
+  color: white !important;
 }
 
 .no-drop {
