--- a/src/screens/Hero/style.scss
+++ b/src/screens/Hero/style.scss
@@ -71,6 +71,7 @@
   }
 
   @include mobile {
+    padding: 40px 0.8em 0;
     .custom-row {
       display: flex;
       flex-direction: column-reverse;
