--- a/src/screens/Hero/style.scss
+++ b/src/screens/Hero/style.scss
@@ -1,5 +1,7 @@
 @import "../../styles/variables.scss";
 
+$color: white;
+
 .hero-section {
   padding-top: 40px;
   scroll-margin-top: 6em;
@@ -19,32 +21,68 @@
     margin-top: 3em;
   }
 
-  .resume-download-btn {
+  .resume-container {
     display: flex;
-    align-items: center;
-    border: 1px solid $theme-border-color;
-    width: max-content;
-    border-radius: 50px;
-    padding: 25px 60px;
-    cursor: pointer;
-    margin: 3em 0;
 
-    img {
-      margin-left: 20px;
-      width: 15px;
-      height: 15px;
+    .resume-download-btn {
+      display: flex;
+      align-items: center;
+      border: 1px solid $theme-border-color;
+      width: max-content;
+      border-radius: 50px;
+      padding: 25px 60px;
+      cursor: pointer;
+      margin: 3em 2em 3em 0;
+
+      img {
+        margin-left: 20px;
+        width: 15px;
+        height: 15px;
+      }
+
+      p {
+        margin: 0;
+        font-weight: 700;
+        font-size: 15px;
+      }
+
+      &:hover {
+        background-color: #2e303d;
+        transition: all 0.5s ease;
+      }
     }
+    .play-video-container {
+      margin: 2em 0;
+      display: flex;
+      align-items: center;
 
-    p {
-      margin: 0;
-      font-weight: 700;
-      font-size: 15px;
+      .play-icon {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        background: transparent;
+        cursor: pointer;
+        border: 2px solid white;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: ripple 1.5s linear infinite;
+        transition: all 0.7s ease;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+        &:focus {
+          outline: none;
+        }
+      }
+      p {
+        margin: 0 40px;
+        color: $theme-text-color-fade;
+        font-weight: 600;
+      }
     }
-  }
-
-  .resume-download-btn:hover {
-    background-color: #2e303d;
-    transition: all 0.5s ease;
   }
 
   .avatar {
@@ -102,26 +140,71 @@
       margin: auto;
     }
 
-    .resume-download-btn {
-      width: 60%;
-      justify-content: center;
-      text-align: center;
-      border-radius: 50px;
-      padding: 15px 20px;
-      margin: 1.5em 0 4em;
-      cursor: pointer;
+    .resume-container {
+      align-items: center;
+      .resume-download-btn {
+        width: 60%;
+        justify-content: center;
+        text-align: center;
+        border-radius: 50px;
+        padding: 15px 20px;
+        // margin: 1.5em 0 4em;
+        cursor: pointer;
 
-      img {
-        margin-left: 20px;
-        width: 15px;
-        height: 15px;
+        img {
+          margin-left: 20px;
+          width: 15px;
+          height: 15px;
+        }
+
+        p {
+          margin: 0;
+          font-weight: 700;
+          font-size: 15px;
+        }
       }
 
-      p {
+      .play-video-container {
         margin: 0;
-        font-weight: 700;
-        font-size: 15px;
+        display: flex;
+        align-items: center;
+
+        .play-icon {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          background: transparent;
+          cursor: pointer;
+          border: 2px solid white;
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          animation: ripple 1.5s linear infinite;
+          transition: all 0.7s ease;
+
+          &:hover {
+            transform: scale(1.1);
+          }
+          &:focus {
+            outline: none;
+          }
+        }
+        p {
+          margin: 0 40px;
+          color: $theme-text-color-fade;
+          font-weight: 600;
+        }
       }
     }
+  }
+}
+
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgba($color, 0.3), 0 0 0 1px rgba($color, 0.3), 0 0 0 3px rgba($color, 0.3), 0 0 0 5px rgba($color, 0.3);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba($color, 0.3), 0 0 0 4px rgba($color, 0.3), 0 0 0 20px rgba($color, 0), 0 0 0 30px rgba($color, 0);
   }
 }
