--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -49,7 +49,9 @@
 
       .small-image {
         height: 100%;
+        width: 100%;
         object-fit: cover;
+        object-position: left;
       }
     }
   }
@@ -57,12 +59,22 @@
   .content {
     margin-top: 3em;
     h4 {
+      display: flex;
+      align-items: center;
       font-family: $theme-body-font;
       color: white;
       font-weight: 900;
       a {
         text-decoration: none;
         color: white;
+      }
+      div {
+        display: flex;
+        img {
+          margin-left: 10px;
+          width: 25px;
+          cursor: pointer;
+        }
       }
     }
 
